マップを表示するところまで実装
googlemapを表示できるようになった。
apikeyを環境変数で管理するように設定。
gradle.propertiesをgitignoreに追加。

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <!-- Google Maps APIキーをここに追加 -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC-MAdmwXw9gGTwAxGMDjD1SNgKONy9sB8"/>
+            android:value="@string/google_maps_key"/>
 
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode|navigation"
