--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
-    "@ionic/angular": "^8.0.0",
+    "@capacitor/toast": "^7.0.2",
+    "@ionic/angular": "^8.7.5",
     "@types/google-maps": "^3.2.6",
     "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
